src/tests/errors/syntax/001.ura
// parse_errors/007 — `as` cast missing target type
use "@/header"

main():
    a int = 5 as